Add Education component and update About module CSS

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   background-color: rgba(12, 12, 12, 0.6);
-  border-radius: 15px;
+  border-radius: 25px;
   padding: 5%;
   margin-top: 7%;
   
@@ -111,8 +111,8 @@
     background-color: rgba(12, 12, 12, 0.6);
     border-radius: 25px;
     padding: 10px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 10%;
     padding-bottom: 15%;
     transition: transform 1s ease;
@@ -124,22 +124,26 @@
     display: none;
   }
 
+  .logoImg {
+    width: 15%;
+  }
+  
   .contentBottom {
     padding: 0% ;
     align-items: center;
     justify-content: center;
-    padding-left: 8%;
+    padding-left: 7%;
     width: 110%;
 
   }  
 
   .aboutItemText h3 {
-    font-size: 18px;
+    font-size: 16px;
     padding: 5px;
   }
   
   .aboutItemText p {
-    padding: 5px; /* Adjust this value to your desired padding */
+    padding: 5px; 
     font-size: 14px !important;
   }
 
@@ -152,16 +156,17 @@
     padding-left: 0;
     padding-right: 0;
     padding: 0%;
+    width: 100%;
   }
   .aboutItemText {
     padding: 0;
   }
   .title {
-    font-size: 35px;
-    margin-left: 27%;
-    margin-top: 7%;
-    margin-bottom: 5%;
-    text-decoration-line: underline;
+    font-size: 25px;
+    padding-left: 10%;
+    padding-top: 8%;
+    padding-bottom: 10px;
+    letter-spacing: 1.75px;
   }
 }
 .androidDev {
