--- a/src/components/techStack/techstack.module.css
+++ b/src/components/techStack/techstack.module.css
@@ -1,6 +1,3 @@
-
-
-/* techstack.module.css */
 @import "../../vars.css";
 
 .container {
@@ -9,11 +6,9 @@
   margin-left: 10%;
   margin-right: 10%;
 }
-
 .container a {
   text-decoration: none;
 }
-
 .container h3 {
   font-size: 25px;
   color: gray;
@@ -33,21 +28,21 @@
 }
 
 .content {
-  display: flex;
+  
   flex-direction: row;
   margin-top: 80px;
   font-size: 30px;
 }
 
-.category {
+.catagory {
   font-weight: 700;
   letter-spacing: 1.75px;
 }
 
 .skills {
+  width: 110%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Center align items */
   gap: 60px;
   padding-top: 40px;
   padding-bottom: 80px;
@@ -55,8 +50,11 @@
 
 .skill {
   display: flex;
+  min-width: 150px;
+  max-width: 180px;
   flex-direction: column;
   align-items: center;
+  /* bottom spacing  */
   gap: 11px;
 }
 
@@ -79,6 +77,8 @@
   font-family: var(--font-roboto);
   font-weight: 500;
 }
+
+
 
 @media screen and (max-width: 830px) {
   .container {
