--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -46,19 +46,40 @@
   letter-spacing: 1.5px;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 1000px) {
   .container {
     flex-direction: column;
     gap: 23px;
+    padding: 5%;
+    width: 100%;
   }
-
   .text {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
   }
+  
+.text h2 {
+  font-size: 40px;
+  font-weight: 700;
+  letter-spacing: 4px;
+}
+
+.text p {
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
 
   .links {
-    align-items: center;
+    align-items: left;
   }
+  .link a {
+    color: var(--color-text);
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+  }
+  
 }
