--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -59,10 +59,17 @@
     width: 70%;
     padding: 20px;
     border: 2px solid #40407e;
-    box-shadow: #40407e 0px 0px 10px 0px;
     border-radius: 24px;
-    transition: max-height 0.5s ease-out; /* Adding smooth transition */
+    transition: transform 0.3s, box-shadow 0.3s; /* Add transition for smoother effect */
 }
+
+.companyDetails:hover {
+    transform: scale(1.05); /* Zoom in a bit on hover */
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); /* Add shadow on hover */
+}
+
+/* Rest of your CSS remains unchanged */
+
 
 .companyDetails:hover .aboutText {
     animation: slideIn 0.3s ease-in-out forwards; /* Adding animation */
@@ -71,15 +78,6 @@
 @keyframes slideIn {
     0% {
         max-height: 100px; /* Start from original max-height */
-    }
-    25% {
-        max-height: calc(100px + 25px); /* Bounce slightly */
-    }
-    50% {
-        max-height: calc(100px + 50px); /* Bounce higher */
-    }
-    75% {
-        max-height: calc(100px + 75px); /* Bounce slightly */
     }
     100% {
         max-height: 100%; }
