--- a/src/components/techStack/techstack.module.css
+++ b/src/components/techStack/techstack.module.css
@@ -78,6 +78,16 @@
   font-weight: 500;
 }
 
+.skill:hover {
+  transform: scale(1.1); 
+}
+
+.skill:hover {
+  filter: brightness(1.2);
+}
+.skill:hover {
+  transition: 0.3s;
+}
 
 
 @media screen and (max-width: 830px) {
