--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -58,6 +58,10 @@
   font-weight: 600;
   padding: 17px 26px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+  transition: transform 0.3s ease;
+}
+.contactBtn:hover {
+  transform: scale(1.05); 
 }
 .imgdiv {
   width: 50%;
