--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,17 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+}
+
+@media screen and (max-width: 1000px) {
+  .App {
+    user-select: none;
+    -webkit-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none;
+  }
+  
 }
 
 
