--- a/src/components/SplashScreen/SplashScreen.module.css
+++ b/src/components/SplashScreen/SplashScreen.module.css
@@ -1,27 +1,19 @@
-.splashScreen {
+/* SplashScreen.module.css */
+.SplashScreen {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  transition: background-color 2s, opacity 1s;
-  z-index: 6;
+  background-color: #ffffff; /* Add your preferred background color */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure it's on top of other elements */
+  opacity: 1; /* Initial opacity */
+  transition: opacity 0.5s ease; /* Smooth transition effect */
 }
 
-.fadeIn {
-  opacity: 1;
-}
-
-.fadeOut {
-  opacity: 0;
-}
-
-.text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 24px;
-  color: rgb(255, 255, 255);
-  transition: opacity 1s;
+.SplashScreen.hidden {
+  opacity: 0; /* Fade out */
 }
