--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -152,7 +152,8 @@
 
   .imgdiv {
     /* margin-left: 30%; */
-    margin-top: 5%;
+    margin-top: 3%;
+    margin-bottom: 7%;
     width: 40%;
     align-self: center;
   }
