--- a/src/components/techStack/techstack.module.css
+++ b/src/components/techStack/techstack.module.css
@@ -95,7 +95,7 @@
     color: var(--color-text);
     align-items: center;
     align-content: center;
-    margin-top: 40px;
+    margin-top: 10px;
     margin-left: 5%;
     margin-right: 5%;
   }
@@ -111,11 +111,14 @@
     flex-direction: column;
     width: 100%;
     margin-top: 40px;
+    margin-bottom: 80px;
   }
   .skills {
     flex-direction: row;
     justify-content: center; /* Center align items */
     width: 100%;
+    padding-bottom: 60px;
+    padding-top: 60px;
   }
   .skill {
     min-width: 20px;
