--- a/src/components/SplashScreen/SplashScreen.module.css
+++ b/src/components/SplashScreen/SplashScreen.module.css
@@ -1,19 +1,152 @@
 /* SplashScreen.module.css */
+
 .SplashScreen {
   position: fixed;
-  top: 0;
-  left: 0;
+  background-color: rgb(255, 255, 255);
   width: 100%;
   height: 100%;
-  background-color: #ffffff; /* Add your preferred background color */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999; /* Ensure it's on top of other elements */
-  opacity: 1; /* Initial opacity */
-  transition: opacity 0.5s ease; /* Smooth transition effect */
+  justify-content: space-between;
+  opacity: 0.7;
+  transition: opacity 0.5s ease;
 }
 
 .SplashScreen.hidden {
-  opacity: 0; /* Fade out */
+  opacity: 0;
+}
+
+.navcontainer {
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  list-style: none;
+  padding-top: 30px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.rectangleone {
+  width: 166px;
+  height: 22px;
+  animation: loading 1s linear infinite alternate;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.rectangletwo {
+  width: 650px;
+  display: flex;
+  margin-left: 650px;
+  height: 22px;
+  animation: loading 1s linear infinite alternate;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+/* for body */
+
+.maincontainer {
+  overflow: hidden;
+  position: relative;
+  border-radius: 10px;
+  list-style: none;
+  margin-top: 150px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.heading {
+  width: 434px;
+  height: 49px;
+  border-radius: 20px;
+  animation: loading 1s linear infinite alternate;
+}
+
+.content {
+  width: 555px;
+  height: 22px;
+  margin-top: 28px;
+  border-radius: 20px;
+  animation: loading 1s linear infinite alternate;
+}
+
+.content1 {
+  width: 517px;
+  height: 22px;
+  margin-top: 10px;
+  border-radius: 20px;
+  animation: loading 1s linear infinite alternate;
+}
+
+.content2 {
+  width: 574px;
+  height: 22px;
+  margin-top: 10px;
+  border-radius: 20px;
+  animation: loading 1s linear infinite alternate;
+}
+
+.maincontent {
+  width: 521px;
+  margin-top: 10px;
+  height: 22px;
+  border-radius: 20px;
+  animation: loading 1s linear infinite alternate;
+}
+
+.maincontent3 {
+  width: 406px;
+  margin-top: 10px;
+  height: 22px;
+  border-radius: 20px;
+  animation: loading 1s linear infinite alternate;
+}
+
+.maincontent4 {
+  width: 327px;
+  border-radius: 20px;
+  height: 22px;
+  margin-top: 10px;
+  animation: loading 1s linear infinite alternate;
+}
+
+.btn {
+  width: 206px;
+  height: 71px;
+  margin-top: 60px;
+  animation: loading 1s linear infinite alternate;
+  border-radius: 20px;
+  margin-left: 10px;
+}
+
+.imgcontainer {
+  height: 300px;
+  width: 300px;
+  margin-right: 100px;
+  border-radius: 50%;
+  animation: loading 1s linear infinite alternate;
+}
+
+.parentcontainer {
+  display: flex;
+}
+
+/* Align maincontainer to the left and imgcontainer to the right */
+.maincontainer {
+  flex: 1;
+}
+
+.imgcontainer {
+  flex: 0 0 auto;
+  margin-right: 5%; 
+  margin-top: 100px;
+}
+
+/* Keyframes for loading animation */
+@keyframes loading {
+  0% {
+    background-color: rgb(110, 110, 110);
+  }
+  100% {
+    background-color: rgb(224, 224, 224);
+  }
 }
