--- a/src/components/SplashScreen/SplashScreen.module.css
+++ b/src/components/SplashScreen/SplashScreen.module.css
@@ -1,17 +1,11 @@
-/* SplashScreen.module.css */
-
 .SplashScreen {
   position: fixed;
   background-color: rgb(255, 255, 255);
   width: 100%;
   height: 100%;
   justify-content: space-between;
-  opacity: 0.7;
+  opacity: 0.5;
   transition: opacity 0.5s ease;
-}
-
-.SplashScreen.hidden {
-  opacity: 0;
 }
 
 .navcontainer {
@@ -23,25 +17,19 @@
   margin-left: 5%;
   margin-right: 5.5%;
 }
-
 .rectangleone {
   width: 250px;
   height: 40px;
   margin-top: 6px;
-  animation: loading 1s linear infinite alternate;
   overflow: hidden;
-  border-radius: 10px;
 }
-
 .rectangletwo {
   margin-top: 6px;
   width: 700px;
   display: flex;
   margin-left: 650px;
   height: 22px;
-  animation: loading 1s linear infinite alternate;
   overflow: hidden;
-  border-radius: 10px;
 }
 
 /* for body */
@@ -55,61 +43,59 @@
   margin-left: 5%;
   margin-right: 5%;
 }
+.parentcontainer {
+  display: flex;
+}
+
+.maincontainer {
+  flex: 1;
+}
+
+
+.rectangleone, .rectangletwo, .heading, .content, .content1, .content2, .maincontent, .maincontent3, .maincontent4, .maincontent5, .maincontent6, .imgcontainer, .btn{
+  animation: loading 1s linear infinite alternate;
+  border-radius: 20px;
+}
+
+.content, .content1, .content2, .maincontent, .maincontent3{
+  height: 22px;
+}
+
 
 .heading {
   width: 434px;
   height: 49px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;
 }
 
 .content {
   width: 555px;
-  height: 22px;
   margin-top: 30px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;
 }
 
 .content1 {
   margin-top: 10px;
   width: 517px;
-  height: 22px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;
 }
 
 .content2 {
   margin-top: 10px;
   width: 574px;
-  height: 22px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;
 }
 
 .maincontent {
   margin-top: 10px;
   width: 521px;
-  height: 22px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;
 }
 
 .maincontent3 {
   margin-top: 10px;
   width: 406px;
-  height: 22px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;
 }
-
-
 
 .btn {
   width: 206px;
   height: 71px;
   margin-top: 60px;
-  animation: loading 1s linear infinite alternate;
   border-radius: 35px;
   margin-left: 10px;
 }
@@ -119,16 +105,6 @@
   width: 320px;
   margin-right: 100px;
   border-radius: 50%;
-  animation: loading 1s linear infinite alternate;
-}
-
-.parentcontainer {
-  display: flex;
-}
-
-/* Align maincontainer to the left and imgcontainer to the right */
-.maincontainer {
-  flex: 1;
 }
 
 .imgcontainer {
@@ -137,7 +113,7 @@
   margin-top: 80px;
 }
 
-/* Keyframes for loading animation */
+
 @keyframes loading {
   0% {
     background-color: rgb(110, 110, 110);
@@ -162,7 +138,6 @@
     width: 120px;
     height: 25px;
     margin-top: 7px;
-    animation: loading 1s linear infinite alternate;
     overflow: hidden;
     border-radius: 10px;
   }
@@ -181,13 +156,11 @@
     margin-top: 40px;
     margin-left: 32%;
     border-radius: 50%;
-    animation: loading 1s linear infinite alternate;
   }
   
   .maincontainer {
     overflow: hidden;
     position:relative;
-    border-radius: 20px;
     margin-top: 210px;
     margin-left: 5%;
     margin-right: 5%;
@@ -196,72 +169,53 @@
   .heading {
     width: 250px;
     height: 38px;
-    border-radius: 20px;
-    animation: loading 1s linear infinite alternate;
+  }
+
+  .content1, .content2, .maincontent, .maincontent3, .maincontent4, .maincontent5, .maincontent6{
+    height: 22px;
+    margin-top: 10px;
   }
   
   .content {
     width: 270px;
     height: 22px;
     margin-top: 30px;
-    border-radius: 20px;
-    animation: loading 1s linear infinite alternate;
   }
   
   .content1 {
-    margin-top: 10px;
     width: 285px;
     height: 22px;
-    border-radius: 20px;
-    animation: loading 1s linear infinite alternate;
   }
   
   .content2 {
-    margin-top: 10px;
     width: 300px;
     height: 22px;
-    border-radius: 20px;
-    animation: loading 1s linear infinite alternate;
   }
   
   .maincontent {
-    margin-top: 10px;
     width: 320px;
     height: 22px;
-    border-radius: 20px;
-    animation: loading 1s linear infinite alternate;
   }
   
   .maincontent3 {
-    margin-top: 10px;
     width: 240px;
     height: 22px;
-    border-radius: 20px;
-    animation: loading 1s linear infinite alternate;
   }
   
-.maincontent4 { 
-  margin-top: 10px;
+.maincontent4 {
   width: 300px;
   height: 22px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;}
+}
 
-.maincontent5{ 
-  margin-top: 10px;
+.maincontent5{
   width: 300px;
   height: 22px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;}
+}
 
 .maincontent6{
-  margin-top: 10px;
   width: 280px;
   height: 22px;
-  border-radius: 20px;
-  animation: loading 1s linear infinite alternate;}
-
-  
+}
   .btn {
     display: block;
     margin-left: auto;
@@ -269,10 +223,7 @@
     width: 160px;
     height: 45px;
     margin-top: 60px;
-    animation: loading 1s linear infinite alternate;
     border-radius: 35px;
-
   }
   
-
 }
