Add styles for heading in Navbar

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -119,6 +119,13 @@
     margin-bottom: 0px;
     font-size: 30px;
   }
+  .heading {
+    color: #576bbc00;
+  }
+  .heading > a:before {
+    background: #576bbc00;
+  }
+
   .menu {
     position: absolute;
     right: 0;
