--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -193,8 +193,9 @@
 
 
 .logo {
-    margin-left: 10px;
-    margin-top: 10px;
+    margin-left: 5px;
+    margin-top: 1px;
+    margin-bottom: 5px;
     width: 60px;
     height: 60px;
 }
@@ -208,9 +209,12 @@
 }
 
 .about h1 {
-    font-size: 0.85rem;
+    font-size: 1rem;
 }
-
+.about h2 {
+    font-size: 0.9rem;
+    color: rgb(192, 192, 192);
+}
 .aboutText {
     margin-top: 15px;
     margin-bottom: 10px;
@@ -221,7 +225,7 @@
 }
 
 .aboutText p {
-    font-size: 0.8rem;
+    font-size: 0.85rem;
     color: rgb(196, 196, 196);
 }
 
@@ -229,9 +233,17 @@
     color: rgb(128, 128, 128);
     margin-top: 5px;
 }
+
+.aboutText p1 {
+    font-size: 1.3rem;
+    text-decoration: underline;
+    font-style: bold;
+    color: rgb(243, 243, 243);
+}
 .skils {
-    font-size: 15px;
+    font-size: 13px;
     margin-top: 3px;
+    padding-left: 5px;
 }
 
 
