--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -14,7 +14,7 @@
 }
 .info {
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 
 }
 .infoo{
@@ -35,7 +35,7 @@
 }
 
 .title {
-  font-size: 60px;
+  font-size: 55px;
   font-weight: 900;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
@@ -59,22 +59,15 @@
 
   margin-right: 30%;
 
-  margin-bottom: 52px;
-  margin-top: 10px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
-.contactBtn {
-  text-decoration: none;
-  background-color: var(--color-primary);
-  color: var(--color-text);
-  border-radius: 100px;
-  font-size: 30px;
-  font-weight: 600;
-  padding: 17px 26px;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
-  transition: transform 0.3s ease;
-}
-.contactBtn:hover {
+/* for button  */
+.button{position:relative;background-color:#576cbc;color:#fff;padding:.9rem 2.20rem;border-radius:3rem;transition:.4s}.button::after{content:'';width:80%;height:40%;background:linear-gradient(80deg,#576cbc 10%,#19376d 48%);position:absolute;left:0;right:0;bottom:-4px;margin:0 auto;border-radius:3rem;filter:blur(12px);z-index:-1;opacity:0;transition:opacity .4s}.button__text{position:relative;z-index:999;font-size:200rem;font:var(--font-roboto)}.button img{position:absolute;inset:0;margin:auto;pointer-events:none;transition:.6s;opacity:0}.button__cone{width:18px;transform:translate(-25px,-6px) rotate(55deg);filter:blur(.5px)}.button__torus{width:38px;transform:translate(7px,-14px) rotate(80deg)}.button__icosahedron{width:36px;transform:translate(34px,-4px) rotate(-45deg);filter:blur(.9px)}.button__sphere{width:30px;transform:translate(-5px,15px) rotate(40deg)}.button:hover::after{opacity:1}.button:hover{transform:scale(1.3)}.button:hover img{opacity:1}.button:hover .button__cone{transform:translate(-48px,-19px) scale(2.9)}.button:hover .button__torus{transform:translate(10px,-36px) scale(1.1)}.button:hover .button__icosahedron{transform:translate(60px,-30px) scale(1.1)}.button:hover .button__sphere{transform:translate(-20px,26px) scale(1.4) }
+
+
+.button:hover {
   transform: scale(1.05); 
 }
 .imgdiv {
@@ -142,7 +135,9 @@
   z-index: 0;
 }
 
-@media screen and (max-width: 830px) {
+
+
+@media screen and (max-width: 1000px) {
   .container {
     flex-direction: column-reverse;
     padding-top: 0%;
@@ -150,10 +145,6 @@
   }
   .title {
     font-size: 40px;
-  }
-  .description {
-    margin-right: 0;
-    margin-bottom: 30px;
   }
 
   .imgdiv {
@@ -165,7 +156,7 @@
   }
 
   .title {
-    font-size: 2.1rem;
+    font-size: 2rem;
     padding-top: 7%;
     margin-bottom: 0%;
   }
@@ -175,16 +166,22 @@
   }
   .infoo{
     display: block;
+    margin-top: 20px;
+    font-size: 20px !important;
+    margin-bottom: 0%;
+
   }
   .description {
-    margin-top: 28px;
-    font-size: 24px;
-    margin-bottom: 40px;
+    margin-top: 25px;
+    font-size: 22px;
+    margin-bottom: 12px;
+    margin-right: 0;
   }
-  .contactBtn {
+  .button {
     align-self: center;
     font-size: 20px;
     padding: 10px 20px;
+    margin-top: 0%;
   }
 }
 
