--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -137,7 +137,7 @@
     margin-top: 10px;
 }
 
-.aboutText p1 {
+.p1 {
     font-size: 1.3rem;
     text-decoration: underline;
     font-style: bold;
